philly-311-citywide-meta/src/objects/RateArticle__c.object
<CustomObject>
    <description>custom object to store the article ratings .</description>
    <fields>
        <fullName>Article_Number__c</fullName>
        <description>Number of the article</description>
        <label>Article Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>user id of a particular user</description>
        <label>User Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>articleID__c</fullName>
        <description>id of the knowledge article</description>
        <inlineHelpText>id of the knowledge article</inlineHelpText>
        <label>articleID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rating__c</fullName>
        <description>rating of the knowledge article</description>
        <inlineHelpText>rating provided by the user.</inlineHelpText>
        <label>rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RateArticle</label>
    <nameField>
        <label>RateArticle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RateArticles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>